# qa_guru_mobile_browserstack

./: README.md  config.personal.env.example  config.py  config.test.env.browserstack  conftest.py  pyproject.toml
mobile_tests/assist/: __init__.py  attach_video.py
mobile_tests/assist/python/: monkey.py
mobile_tests/assist/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
mobile_tests/utils/: file.py
mobile_tests/utils/allure/: attach.py
mobile_tests/utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
tests/: conftest.py
tests/android/: test_wikipedia.py
